# ai

./: README.md
2_agents/: README.md
2_agents/buddy_ai/config/: tasks.yaml
2_agents/buddy_ai/src/: crew.py  main.py
buddy_ai/: README.md  docker-compose.yml  steps.md
buddy_ai/config/: agents.yaml  sample_document.txt  tasks.yaml
buddy_ai/src/: crew.py  crew_output.txt  main.py
buddy_ai/src/config/: agents.yaml  tasks.yaml
buddy_ai_02_quiz/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
buddy_ai_02_quiz/src/: crew.py  crew_output.txt  main.py
