[project]
name = "buddy_ai"
version = "0.1.0"
description = "buddy_ai using crewAI"
authors = [{ name = "Canis Latrans Coxus", email = "canislatranscoxus@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.7"
]

[project.scripts]
# CORRECCIÓN: Cambiamos 'buddy_ai.main' por 'src.main'
buddy_ai = "src.main:run"
run_crew = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"
run_with_trigger = "src.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
